Rename file and Add Metadata

--- a/harmonic_oscillator.ipynb
+++ b/harmonic_oscillator.ipynb
@@ -7,9 +7,9 @@
     "# Euler Method and Verlet Integration\n",
     "### Harmonic Oscillator\n",
     "Hermonic Oscillator equation is simply written by the following equation.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\ddot{x} + x &= 0\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "## Euler Method\n",
     "To solve this equation,  let's try to use the euler mehod.\n",
@@ -17,20 +17,20 @@
     "\n",
     "\n",
     "The euler method of first order differential equation becomes follows.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "x_{n+1} &= x_n + \\Delta t f \\left( x\\right)\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "To bring this to the second order differential equation, let's take $x$ as a vector.\n",
     "And the harmonic oscillator equation is given by followings.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\dot{X}\n",
     "&=\n",
     "A\n",
     "X \n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "Here, \n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "X &= \\begin{pmatrix}\n",
     "x \\\\\n",
     "\\dot{x}\n",
@@ -40,20 +40,20 @@
     "0 & 1\\\\\n",
     "-1 & 0 \n",
     "\\end{pmatrix}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "\n",
     "So, let's simulate this in following code.\n",
     "here the initilal conditions are \n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "x\\left( 0 \\right) &= 1 \\\\\n",
     "\\dot{x}\\left( 0 \\right) &= 0 \\\\\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11941b2d0>"
+       "<matplotlib.legend.Legend at 0x11d946410>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -128,16 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1194bd690>"
+       "<matplotlib.legend.Legend at 0x11d9ff190>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,11 +173,11 @@
    "metadata": {},
    "source": [
     "In the euler method, our model was followings.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "X_{n+1} &= X_{n} + \\Delta t A X_{n}  \\\\\n",
     "&= \\left( I + \\Delta t A \\right) X_{n} \\\\\n",
     "&= \\left( I + \\Delta t A \\right)^{n} X_{0}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "From the above expression, it is clear that the eigenvalues of the matrix $I + \\Delta t A$ gives us the divergence causes."
    ]
   },
@@ -186,20 +186,20 @@
    "metadata": {},
    "source": [
     "The eigenvalues $\\lambda$ of $I + \\Delta t A$ is calculated as follows,\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\begin{vmatrix}\n",
     "1 -\\lambda & \\Delta t \\\\\n",
     "-\\Delta t & 1- \\lambda \n",
     "\\end{vmatrix}\n",
     "&= \\lambda^2 -2 \\lambda + 1 + \\Delta t^2\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "And eigenvalues are given by the complex number\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\lambda &= 1 \\pm i \\Delta t\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "So, now we can rewrite our models in different form by diagonalization as follows,\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "X_{n+1} &= P^{-1} D^n P X_{n} \\\\\n",
     "&=  P^{-1}\n",
     "\\begin{pmatrix}\n",
@@ -207,14 +207,14 @@
     "0 & \\left(  1 - i \\Delta t \\right)^n \n",
     "\\end{pmatrix}\n",
     "P X_{n}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "This stand for that the modulus of the eigenvalues should be close enough to 1 so that to get the observation time independent oscillation numerical result. In here, the value of $n$ is convertible to the observation time $T$.\n",
     "Now our modulus of the eigenvalues is\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "|1 +\\pm  i \\Delta t| &= \\sqrt{1+\\Delta t^2}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n"
    ]
   },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1196872d0>"
+       "<matplotlib.legend.Legend at 0x11950c8d0>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -304,16 +304,16 @@
    "metadata": {},
    "source": [
     "In the simple euler method that we solved before, the relation between distance $x$ and velocity $\\dot{x} = v$ was following.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "v_{n+1} &= v_n - dt \\cdot x_{n} \\\\\n",
     "x_{n+1} &= x_n + dt \\cdot v_{n}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Now, we modify to the calculation as follows in order to get next step of value with leapfrog algorithm.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "v_{n+1} &= v_n - dt \\cdot x_{n} \\\\\n",
     "x_{n+1} &= x_n + dt \\cdot v_{n+1}\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -321,12 +321,12 @@
    "metadata": {},
    "source": [
     "Then, our model could be written as followings by simplifying above equations.\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "x_{n+1} &= \\left( 1-\\Delta t^2 \\right)\\cdot  x_n + \\Delta t \\cdot v_n \\\\\n",
     "v_{n+1} &= -\\Delta t \\cdot x_n  + v_n\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "And in matrix form,\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\begin{pmatrix}\n",
     "x_{n+1} \\\\\n",
     "v_{n+1}\n",
@@ -340,7 +340,7 @@
     "x_{n} \\\\\n",
     "v_{n}\n",
     "\\end{pmatrix}\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -350,15 +350,15 @@
     "Next thing to do is that to evaluate the accuracy of the numerical method in time domain.\n",
     "As the same way before, calcurate eigonvalues as follows.\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\lambda &= \\frac{2 - \\Delta t^2 \\pm i \\Delta t \\sqrt{4 - \\Delta t ^2 }}{2}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "and it's modulus $|\\lambda|$ is,\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "|\\lambda| &= \\frac{4 - 4 \\Delta t^2 + \\Delta t^4 - \\Delta t^4 + 4\\Delta t^2}{4} \\\\\n",
     "&= 1\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -425,16 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x119951890>"
+       "<matplotlib.legend.Legend at 0x11d8f8b90>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -465,16 +465,14 @@
     "* In the euler method, error of the calcuration is not only depends on step time $dt$, but also important to take account observation time $T$.\n",
     "* Verlet method is valid for such case, and since in hamiltonian of the harmonic oscillator is expressed by the kinetic energy $\\frac{1}{2}v^2$ and potential energy $\\frac{1}{2} x^2$, to apply leapfrog algolism to these vareable is effective to get relatively accurate answer."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "authors": [
+   {
+    "name": "Aoi Watanabe"
+   }
+  ],
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -491,7 +489,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
-  }
+  },
+  "title": "Harmonic Oscillator"
  },
  "nbformat": 4,
  "nbformat_minor": 2
